test/indexOutOfBounds6.slq
// args: --run

def main(){
	x:=[1,2,3];
	x[3]+=1; // error
}
